--- a/index.html
+++ b/index.html
@@ -86,15 +86,14 @@
              <div class="columns1">
                <p style="color: #4b4a4a;  font-weight: Regular; font-size: 14px;">Course Name</p>
             </div>
-             <div class="columns1" style=" background: rgba(255,255,255,1);  width: 20rem; height: 48px; border-radius: 10px; padding-left: 1.5rem; display: flex; align-items: center; padding-top: 1rem;">
+             <div class="columns1" style=" background: rgba(255,255,255,1);   height: 48px; border-radius: 10px; padding-left: 1.5rem; display: flex; align-items: center; padding-top: 1rem;">
                <p style="color: #4b4a4a; font-weight: Medium; font-size: 14px;">UIUX Design For Beginner</p>
             </div>
             <div class="columns1">
                <p style="color: #4b4a4a;  font-weight: Regular; font-size: 14px; display: flex; align-items: center; padding-top: 1rem;">Course Price</p>
            </div>
-        <div class="columns1" style=" background: rgba(255,255,255,1);  width: 350px; height: 48px; border-radius: 10px; padding-left: 1.5rem; display: flex; align-items: center; padding-top: 1rem;">
+        <div class="columns1" style=" background: rgba(255,255,255,1);    height: 48px; border-radius: 10px; padding-left: 1.5rem; display: flex; align-items: center; padding-top: 1rem;">
             <p style="color: #4b4a4a; font-weight: Medium; font-size: 14px;">$</p>
-            <div class="columns1" style="width: 1.5rem; height: 50%;"></div>
             <p style="color: #4b4a4a; font-weight: Medium; font-size: 14px;">76</p>
         </div>
             <div class="columns1" style=" height: 3rem;  display: flex; align-items: center; padding-top: 1rem;">
@@ -104,7 +103,7 @@
                 <p style="color: #4b4a4a;  font-weight: Regular; font-size: 14px; display: flex; align-items: center; padding-top: 1rem;">Coupon Code</p>
             </div>
             <div class="columns1"
-                style=" background: rgba(255,255,255,1);  width: 20rem; height: 48px; border-radius: 10px; padding-left: 1.5rem; display: flex; align-items: center; padding-top: 1rem;">
+                style=" background: rgba(255,255,255,1);    height: 48px; border-radius: 10px; padding-left: 1.5rem; display: flex; align-items: center; padding-top: 1rem;">
                 <p style="color: #4b4a4a; font-weight: Medium; font-size: 14px;">Example: UIUX2021</p>
             </div>
             <div class="columns1">
@@ -169,7 +168,7 @@
                     <p style="color: #4b4a4a;  font-weight: Regular; font-size: 14px;">Instructure</p>
                 </div>
                 <div class="columns1"
-                    style=" background: rgba(255,255,255,1);  width: 350px; height: 48px; border-radius: 10px; padding-left: 1.5rem; display: flex; align-items: center; padding-top: 1rem;">
+                    style=" background: rgba(255,255,255,1);    height: 48px; border-radius: 10px; padding-left: 1.5rem; display: flex; align-items: center; padding-top: 1rem;">
                     <p style="color: #4b4a4a; font-weight: Medium; font-size: 14px;">Raja Zulcom</p>
                 </div>
                 <div class="columns1">
@@ -195,9 +194,8 @@
                     <p style="color: #4b4a4a;  font-weight: Regular; font-size: 14px; display: flex; align-items: center; padding-top: 1rem;"> Discount Price</p>
                 </div>
                 <div class="columns1"
-                    style=" background: rgba(255,255,255,1);  width: 350px; height: 48px; border-radius: 10px; padding-left: 1.5rem; display: flex; align-items: center; padding-top: 1rem;">
+                    style=" background: rgba(255,255,255,1);    height: 48px; border-radius: 10px; padding-left: 1.5rem; display: flex; align-items: center; padding-top: 1rem;">
                     <p style="color: #4b4a4a; font-weight: Medium; font-size: 14px;">$</p>
-                    <div style="width: 1.5rem; height: 1.5rem; "></div>
                     <p style="color: #4b4a4a; font-weight: Medium; font-size: 14px;">76</p>
                 </div>
             </div>
